build: optimize backend for production deployment